--- a/testAcademy.ipynb
+++ b/testAcademy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOcdaWEN+oAsT9oSlWbYmwg",
+      "authorship_tag": "ABX9TyM7FGv5NUJiz10cVFJHR2Z5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 160
         },
-        "outputId": "2a5777cb-105d-41a7-9b1e-ba91f29959cc"
+        "outputId": "d71a5fbb-696f-4fb6-869a-da3e2aab4d10"
       },
       "source": [
         "!pip install -q kaggle\n",
@@ -79,16 +79,16 @@
         "!kaggle datasets download -d uciml/red-wine-quality-cortez-et-al-2009\n",
         "!unzip red-wine-quality-cortez-et-al-2009.zip"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-308aeb84-412a-4c97-b80f-44181e2250d9\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-ff1c1716-be16-4661-8ef3-b2172f9b6af6\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-308aeb84-412a-4c97-b80f-44181e2250d9\">\n",
+              "     <output id=\"result-ff1c1716-be16-4661-8ef3-b2172f9b6af6\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -104,11 +104,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving kaggle.json to kaggle (1).json\n",
+            "Saving kaggle.json to kaggle (3).json\n",
             "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
             "red-wine-quality-cortez-et-al-2009.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
             "Archive:  red-wine-quality-cortez-et-al-2009.zip\n",
-            "replace winequality-red.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: y\n",
+            "replace winequality-red.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: A\n",
             "  inflating: winequality-red.csv     \n"
           ]
         }
@@ -117,13 +117,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B9aDNUIzJANn"
+        "id": "B9aDNUIzJANn",
+        "outputId": "05f9b5dd-a5aa-4587-9a50-431f82722458",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!cp kaggle.json ~/.kaggle\n",
+        "#permission for the json to act\n",
+        "!chmod 600 ~/.kaggle/kaggle.json\n",
+        "# Datasets available here:\n",
+        "# https://www.kaggle.com/mamtadhaker/lt-vehicle-loan-default-prediction\n",
+        "!kaggle datasets download -d mamtadhaker/lt-vehicle-loan-default-prediction\n",
+        "!unzip lt-vehicle-loan-default-prediction.zip"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading lt-vehicle-loan-default-prediction.zip to /content\n",
+            " 43% 5.00M/11.5M [00:00<00:00, 43.7MB/s]\n",
+            "100% 11.5M/11.5M [00:00<00:00, 56.2MB/s]\n",
+            "Archive:  lt-vehicle-loan-default-prediction.zip\n",
+            "  inflating: data_dictionary.csv     \n",
+            "  inflating: test.csv                \n",
+            "  inflating: train.csv               \n"
+          ]
+        }
+      ]
     }
   ]
 }
